--- a/covid-19.html
+++ b/covid-19.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Philippine Education Before Covid-19 Crisis</title>
-        <link rel="stylesheet" type="text/css" href="covid-19.css">
+        <link rel="stylesheet" type="text/css" href="css files/covid-19.css">
     </head>
     <body>
 
@@ -15,8 +15,6 @@
             <ul>
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="all_articles.html">Articles</a></li>
-                <li><a href="#">About</a></li>   
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         
